--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <input type="text" placeholder="Type your Pokemon" id="userInput"/>
         <button id="myButton">search</button>
         <div id="results"></div>
+        <div id="pokemonImage"></div>
       </form>
     </div>
     <br/>
     <script src="script.js"></script>
   </body>
+  <footer>
+    <p>Images from "https://pokemondb.net/".</p>
+  </footer>
 </html>
