--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Find your Pokemon</h1>
     <div>
       <form action="#" id="wrapper">
-        <h2>Pokemon App</h2>
+        <h2>Pokemon moves</h2>
         <label for="userInput"></label>
         <input type="text" placeholder="Type your Pokemon" id="userInput"/>
         <button id="myButton">search</button>
